@@ -122,8 +122,9 @@ protected:
 
 private:
 	DECLARE_DYNTRANS_INSTR(b);
-	DECLARE_DYNTRANS_INSTR(mov_lit_reg);
 	DECLARE_DYNTRANS_INSTR(lda_displacement);
+	DECLARE_DYNTRANS_INSTR(mov_lit_reg);
+	DECLARE_DYNTRANS_INSTR(sysctl);
 
 	void Translate(uint32_t iword, uint32_t iword2, struct DyntransIC* ic);
 	DECLARE_DYNTRANS_INSTR(ToBeTranslated);
